--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -149,5 +149,5 @@ $highlight-name-function: #990000;
 $highlight-name-namespace: #555555;
 $highlight-name-tag: #000080;
 $highlight-text-whitespace: #bbbbbb;
-$highlight-literal-string-regex: #009926;
+$highlight-literal-string-regex: #ff6beb;
 $highlight-literal-string-symbol: #990073;
