--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -27,10 +27,10 @@ $body-bg            : #fdfdfd;
 ------------------------------------------------------------------- */
 
 $ci-1               : #ffffff; // dark turquoise
-$ci-2               : #45B29D; // turquoise
-$ci-3               : #EFC94C; // yellow
-$ci-4               : #E27A3F; // orange
-$ci-5               : #DF4949; // red
+$ci-2               : #ffffff; // turquoise
+$ci-3               : #ffffff; // yellow
+$ci-4               : #ffffff; // orange
+$ci-5               : #ffffff; // red
 $ci-6               : #ffffff; // green
 
 
