--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,12 +26,12 @@ $body-bg            : #fdfdfd;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 ------------------------------------------------------------------- */
 
-$ci-1               : #ffffff; // dark turquoise
-$ci-2               : #ffffff; // turquoise
-$ci-3               : #ffffff; // yellow
-$ci-4               : #ffffff; // orange
-$ci-5               : #ffffff; // red
-$ci-6               : #ffffff; // green
+$ci-1               : #eca9e3; // dark turquoise
+$ci-2               : #eca9e3; // turquoise
+$ci-3               : #eca9e3; // yellow
+$ci-4               : #eca9e3; // orange
+$ci-5               : #eca9e3; // red
+$ci-6               : #eca9e3; // green
 
 
 
