--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,7 +26,7 @@ $body-bg            : #fdfdfd;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 ------------------------------------------------------------------- */
 
-$ci-1               : #eca9e3; // dark turquoise
+$ci-1               : #323232; // dark turquoise
 $ci-2               : #eca9e3; // turquoise
 $ci-3               : #eca9e3; // yellow
 $ci-4               : #eca9e3; // orange
