--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -26,8 +26,8 @@ $body-bg            : #fdfdfd;
    https://color.adobe.com/de/Flat-Design-Colors-v2-color-theme-4341903/
 ------------------------------------------------------------------- */
 
-$ci-1               : #323232; // dark turquoise
-$ci-2               : #eca9e3; // turquoise
+$ci-1               : #e63380; // dark turquoise
+$ci-2               : #323232; // turquoise
 $ci-3               : #eca9e3; // yellow
 $ci-4               : #eca9e3; // orange
 $ci-5               : #eca9e3; // red
