--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -28,7 +28,7 @@ $body-bg            : #fdfdfd;
 
 $ci-1               : #e63380; // dark turquoise
 $ci-2               : #e63380; // turquoise
-$ci-3               : #e63380; // yellow
+$ci-3               : #ffffff; // yellow
 $ci-4               : #eca9e3; // orange
 $ci-5               : #eca9e3; // red
 $ci-6               : #eca9e3; // green
