--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -27,7 +27,7 @@ $body-bg            : #fdfdfd;
 ------------------------------------------------------------------- */
 
 $ci-1               : #e63380; // dark turquoise
-$ci-2               : #ffffff; // turquoise
+$ci-2               : #eca9e3; // turquoise
 $ci-3               : #ffffff; // yellow
 $ci-4               : #eca9e3; // orange
 $ci-5               : #eca9e3; // red
