--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -29,8 +29,8 @@ $body-bg            : #fdfdfd;
 $ci-1               : #e63380; // dark turquoise
 $ci-2               : rgba(240, 135, 180, 0.75); // turquoise
 $ci-3               : #EFC94C; // yellow
-$ci-4               : #E27A3F; // orange
-$ci-5               : #DF4949; // red
+$ci-4               : rgba(240, 135, 180, 0.75); // orange
+$ci-5               : #e63380; // red
 $ci-6               : #e63380; // green
 
 
