--- a/_sass/_01_settings_colors.scss
+++ b/_sass/_01_settings_colors.scss
@@ -28,7 +28,7 @@ $body-bg            : #fdfdfd;
 
 $ci-1               : #e63380; // dark turquoise
 $ci-2               : rgba(240, 135, 180, 0.75); // turquoise
-$ci-3               : #EFC94C; // yellow
+$ci-3               : rgba(240, 135, 180, 0.75); // yellow
 $ci-4               : rgba(240, 135, 180, 0.75); // orange
 $ci-5               : #e63380; // red
 $ci-6               : #e63380; // green
