--- a/assets/css/rss.scss
+++ b/assets/css/rss.scss
@@ -14,6 +14,7 @@ $include-html-classes: false;
 
 * {
 	display: block;
+	box-sizing: border-box;
 }
 
 :root {
@@ -21,6 +22,19 @@ $include-html-classes: false;
 	background: $body-bg;
 	color: $body-font-color;
 	font-family: $body-font-family;
+}
+
+.column {
+	float: left;
+	width: 50%;
+	padding: 10px;
+	height: 300px; /* Should be removed. Only for demonstration */
+  }
+
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
 }
 
 channel {
