--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -49,6 +49,6 @@ sitemap:
 @import "11_syntax-highlighting.scss";
 
 
-.medium-3 columns{
-  row-gap: 25px;
+.medium-3-columns{
+  padding-bottom: 15px;
 }
