--- a/_sass/foundation-components/_forms.scss
+++ b/_sass/foundation-components/_forms.scss
@@ -93,7 +93,8 @@ $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%) !default;
     &.collapse { margin: 0;
 
       .column,
-      .columns { padding: 0; }
+      .columns { padding: 0; 
+                 padding-bottom: 15px;}
       input {
         @include side-radius($opposite-direction, 0);
       }
