--- a/_sass/foundation-components/_forms.scss
+++ b/_sass/foundation-components/_forms.scss
@@ -93,8 +93,7 @@ $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%) !default;
     &.collapse { margin: 0;
 
       .column,
-      .columns { padding: 0; 
-                 padding-bottom: 15px;}
+      .columns { padding: 0; }
       input {
         @include side-radius($opposite-direction, 0);
       }
@@ -105,6 +104,11 @@ $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%) !default;
   input.columns,
   textarea.column,
   textarea.columns { padding-#{$default-float}: ($form-spacing / 2); }
+}
+
+.pycom {
+  width: 50px;
+  height:100px;
 }
 
 // @MIXIN
