--- a/_sass/foundation-components/_forms.scss
+++ b/_sass/foundation-components/_forms.scss
@@ -106,6 +106,55 @@ $select-hover-bg-color: scale-color($select-bg-color, $lightness: -3%) !default;
   textarea.columns { padding-#{$default-float}: ($form-spacing / 2); }
 }
 
+.container_12 .grid_1 {
+  width:6.333%;
+}
+
+.container_12 .grid_2 {
+  width:14.667%;
+}
+
+.container_12 .grid_3 {
+  width:23.0%;
+}
+
+.container_12 .grid_4 {
+  width:31.333%;
+}
+
+.container_12 .grid_5 {
+  width:39.667%;
+}
+
+.container_12 .grid_6 {
+  width:48.0%;
+}
+
+.container_12 .grid_7 {
+  width:56.333%;
+}
+
+.container_12 .grid_8 {
+  width:64.667%;
+}
+
+.container_12 .grid_9 {
+  width:73.0%;
+}
+
+.container_12 .grid_10 {
+  width:81.333%;
+}
+
+.container_12 .grid_11 {
+  width:89.667%;
+}
+
+.container_12 .grid_12 {
+  width:98.0%;
+}
+
+
 // @MIXIN
 //
 // We use this mixin to give all basic form elements their style
