--- a/_sass/foundation-components/_block-grid.scss
+++ b/_sass/foundation-components/_block-grid.scss
@@ -132,6 +132,6 @@ $block-grid-media-queries: true !default;
 }
 
 .medium-3.columns{
-  width: "25%"
-  height: "200px"
+  width: "25%";
+  height: "200px";
 }
