--- a/_sass/foundation-components/_block-grid.scss
+++ b/_sass/foundation-components/_block-grid.scss
@@ -131,7 +131,7 @@ $block-grid-media-queries: true !default;
   }
 }
 
-.medium-3.columns{
+.medium.columns{
   width: "25%";
   height: "200px";
 }
