--- a/_sass/_04_settings_global.scss
+++ b/_sass/_04_settings_global.scss
@@ -73,6 +73,10 @@ $spacing-unit: 30px;
 $base-font-size: 16px;
 $rem-base: $base-font-size;
 
+.imgcont {
+    width: "100px";
+    height: "200px";
+}
 
 // The $base-font-size is 100% while $base-line-height is 150%
 // $base-line-height: 150%;
