--- a/_sass/_04_settings_global.scss
+++ b/_sass/_04_settings_global.scss
@@ -73,9 +73,8 @@ $spacing-unit: 30px;
 $base-font-size: 16px;
 $rem-base: $base-font-size;
 
-.imgcont {
-    width: "500px";
-    height: "700px";
+.medium-3 {
+    height: "400px";
 }
 
 // The $base-font-size is 100% while $base-line-height is 150%
