--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -71,4 +71,9 @@
           </section>
         </nav>
       </div><!-- /#subfooter -->
+
+        <p class="sometext" style="font-size: 15px; line-height: 1.4em; padding: 0px 0px 0px 0px;">
+
+            <a style="text-align:center" class="buttons github " href="{{ site.github.repository_url }}/blob/master/docs/contributing.md "><b>Contribute</b></a>
+        </p>
     </footer>
