--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@ layout: compress
 	{{ content }}
 
 	{% unless page.skip_boilerplate %}
+	{% include _contribute.html %}
 	{% include _footer.html %}
 	{% endunless %}
 
