--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -72,7 +72,7 @@ sitemap:
   outline: 0;
   padding: 12px;
   color: white;
-  background-color: #000;
+  background-color: #e63380;
   text-align: center;
   cursor: pointer;
   width: 100%;
