--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -55,7 +55,7 @@ sitemap:
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(240, 135, 180, 0.75);
   max-width: 600px;
   margin: auto;
   text-align: center;
