--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -62,6 +62,11 @@ sitemap:
   font-family: arial;
 }
 
+.cardimg {
+  max-width: 300px;
+  max-height: 300px;
+}
+
 .price {
   color: grey;
   font-size: 22px;
