--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -105,3 +105,7 @@ sitemap:
 }
 
 .pagination a:hover:not(.active) {background-color: rgba(240, 135, 180, 0.75);}
+
+.hr{
+  padding-bottom: 15px;
+}
