--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -126,7 +126,10 @@ body {
 }
 
 /* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
+.row {
+  margin: 0 -5px;
+  width: 100%;
+}
 
 /* Clear floats after the columns */
 .row:after {
@@ -137,7 +140,6 @@ body {
 
 /* Style the counter cards */
 .card {
-  width: 25%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   padding: 16px;
   text-align: center;
