--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -128,6 +128,7 @@ body {
 /* Remove extra left and right margins, due to padding in columns */
 .row {
   width: 100%;
+  padding-bottom: 10px;
 }
 
 /* Clear floats after the columns */
