--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -122,7 +122,7 @@ body {
 .column {
   float: left;
   width: 50%;
-  padding: 0 10px;
+  padding: 10px 0px 30px 30px;
 }
 
 /* Remove extra left and right margins, due to padding in columns */
@@ -152,6 +152,7 @@ body {
     width: 100%;
     display: block;
     margin-bottom: 20px;
+    padding: 10px 0px 30px 30px;
   }
 }
 
