--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -160,3 +160,14 @@ body {
   max-width: 100%;
   height: auto;
 }
+
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: rgba(240, 135, 180, 0.75);
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+}
