--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -161,13 +161,23 @@ body {
   height: auto;
 }
 
-.block {
+.button-big {
   display: block;
   width: 100%;
   border: none;
   background-color: rgba(240, 135, 180, 0.75);
-  padding: 14px 28px;
-  font-size: 16px;
+  padding-top: 1rem;
+  padding-right: 2rem;
+  padding-bottom: 1.0625rem;
+  padding-left: 2rem;
+  background-color: #e63380;
+  font-weight: normal;
+  font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
   cursor: pointer;
   text-align: center;
+  line-height: normal;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 0;
 }
