--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -84,6 +84,9 @@
 
 {% endcomment %}
       <ul class="left">
+        <div class="logo-image">
+          <img src="logo.png" class="img-fluid">
+        </div>
         {% for link in site.data.navigation %}
 
               {% if link.url contains 'http' %}
