--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -85,7 +85,7 @@
 {% endcomment %}
       <ul class="left">
         <div class="logo-image">
-          <img src="logo.png" class="img-fluid">
+          <img src="assets/img/logo.png" class="img-fluid">
         </div>
         {% for link in site.data.navigation %}
 
