--- a/assets/css/styles_feeling_responsive.scss
+++ b/assets/css/styles_feeling_responsive.scss
@@ -159,6 +159,8 @@ body {
 .img-fluid{
   max-width: 100%;
   height: auto;
+  padding-left: 30px;
+  padding-top: 10px
 }
 
 .bigbutton {
@@ -174,8 +176,8 @@ body {
 }
 
 .logo-image{
-  width: 46px;
-  height: 46px;
+  width: 160px;
+  height: 100%;
   border-radius: 50%;
   overflow: hidden;
   margin-top: -6px;
