--- a/_sass/_05_normalize.scss
+++ b/_sass/_05_normalize.scss
@@ -11,6 +11,7 @@ html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  background-image: url("p1.jpg")
 }
 
 /**
